Highlith overflow fix

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -3,7 +3,7 @@
  */
 .highlight {
     background: #fff;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: 15px;
     font-size: 14px;
 
